# gui_calendar

./: .gitignore  LICENSE  Makefile  README.md  algo.c  algo.h  application.c  calendar.c  calendar.h  calendar_layout.c  colors.c  datetime.c  editor.c  editor_parser.c  gen_keys.py  gui.c  gui.h  keyboard.c  keyboard.h  libical_parse.c  main.c  meson.build  pango.c  pango.h  parse.c  parse.h  render.c  subprocess.c  util.c  util.h
Documentation/: bugs.md  filters.md  interface.md  uexpr.md  uexpr_cal.md
backend/: dummy.c  fbdev.c  gui.h  image.c  svg.c  wayland.c
contrib/: default.uexpr
include/: algo.h  application.h  backend.h  calendar.h  config.h  core.h  date.h  datetime.h  editor.h  hashmap.h  keyboard.h  loop.h  pango.h  props.h  render.h  uexpr.h  util.h  vec.h  views.h
scripts/: lint.sh  test_uexpr.sh
scripts/lint/: line_length.awk
src/: application.c  calendar.c  calendar_layout.c  colors.c  datetime.c  editor.c  editor_parser.c  libical_parse.c  render.c  subprocess.c  util.c  views.c
src/algo/: calendar_layout.c  todo_schedule.c
src/backend/: dummy.c  fbdev.c  image.c  svg.c  wayland.c
src/common/: calendar.c  colors.gperf  datetime.c  libical_iface.c  libical_parse.c  loop.c  props.c  subprocess.c  util.c
src/common/algo/: calendar_layout.c  heapsort.c  perm.c  todo_schedule.c
src/container/: hashmap.c  vec.c
src/core/: core.c
src/gui-calendar/: application.c  editor.c  editor_parser.c  keyboard.c  main.c  pango.c  render.c  uexpr_cal.c  views.c
src/gui-calendar/backend/: dummy.c  fbdev.c  image.c  svg.c  wayland.c
src/test/: fuzz_editor.c  fuzz_parse_ics.c  test_main.c
src/tests/: fuzz_editor.c  fuzz_parse_ics.c  test_main.c
src/uexpr/: main.c  uexpr.c
src/utils/: gen.c
test/uexpr/: input1.txt  out1.txt
tests/: fuzz_editor.c  test_editor.c  test_main.c
util/: hashmap.c  hashmap.h
